Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,7 @@ steps:
         fi
         namespace_status_iterations=$((namespace_status_iterations+1))
       done
-      echo "Succeffully plublish namespace: $(namespace)"
+      echo "Successffully published namespace: $(namespace)"
     else
       echo "Namespace $(namespace) is already exists"
     fi
